2004-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-insert-subject): Remove redundant setq.

2004-10-05  Juri Linkov  <juri@jurta.org>

	* gnus-group.el (gnus-update-group-mark-positions):
	* gnus-sum.el (gnus-update-summary-mark-positions):
	* message.el (message-check-news-body-syntax):
	* gnus-msg.el (gnus-debug): Use `string-as-multibyte' to convert
	8-bit unibyte values to a multibyte string for search functions.

2004-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-toggle-header): Make it work even if
	there's no visible header.

2004-10-01  Simon Josefsson  <jas@extundo.com>

	* mailcap.el (mailcap-mime-data): Add pdf.  Remove non-free
	acroread.

2004-09-29  Jesper Harder  <harder@ifa.au.dk>

	* gnus.el (gnus-method-to-server): Oops, move it don't delete it.

2004-09-28  Jesper Harder  <harder@ifa.au.dk>

	* gnus-picon.el: Require cl.

	* mml-sec.el (mml-signencrypt-style): Don't depend on Gnus.

	* mml-smime.el: Require cl.  Autoload message-fetch-field.

	* gnus-fun.el: Require gnus-ems and gnus-util.

	* gnus-diary.el (gnus-diary-header-schedule): caddr -> car (cddr

	* gnus-art.el (gnus-article-edit-mode): Define before first
	reference.

	* gnus.el (gnus-method-to-server): Move defsubst before first use.

	* spam.el (spam-check-spamoracle, spam-spamoracle-learn): Fix
	format string mismatch.
	* nnml.el (nnml-request-set-mark, nnml-save-marks): do.	
	* nnfolder.el (nnfolder-request-set-mark, nnfolder-save-marks): do.

2004-09-27  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.el (gnus-version-number): Set to 5.11.

2004-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-copy-to-buffer): Don't use set-buffer-multibyte.

2004-09-26  Jesper Harder  <harder@ifa.au.dk>

	* gnus-msg.el (gnus-post-news): Use blank Newsgroups line if
	GROUP is a virtual group.

	* mm-util.el (mm-charset-synonym-alist): Remove obsolete entries
	for big5 and gb2312.
	